fix: removing overflow

--- a/src/pages/products/Products.module.scss
+++ b/src/pages/products/Products.module.scss
@@ -60,14 +60,14 @@
         .column1 {
           display: grid;
           grid-template-rows: 186px 116px 288px 288px;
-          overflow: hidden;
+          // overflow: hidden;
           gap: 16px;
         }
 
         .column2 {
           display: grid;
           grid-template-rows: 288px 76px 249px 191px;
-          overflow: hidden;
+          // overflow: hidden;
           gap: 16px;
 
           img {
@@ -143,7 +143,7 @@
           .column3 {
             display: grid;
             grid-template-rows: 240px 600px 240px 388px 160px 160px;
-            overflow: hidden;
+            // overflow: hidden;
             gap: 16px;
           }
         }
